# rasterizer

./: CMakeLists.txt  Makefile  rasterizer
src/: app.c  app.h  display.c  display.h  graphics.c  graphics.h  main.c  sprite.c  sprite.h  vec2.c  vec2.h
